solved layout misalignments

--- a/source/css/foundation/_base.sass
+++ b/source/css/foundation/_base.sass
@@ -75,14 +75,15 @@
 
 html, body
   height: 100%
+  min-width: var(--min-width-app)
 html
   font-size: 10px
 body
-  min-width: var(--min-width-app)
   font-family: 'Roboto Condensed', sans-serif
   font-size: 1.2rem
   line-height: 1.5
   background-color: var(--color-gray)
+  overflow: hidden
   &[data-page="top"]
     &[data-display="results"] [data-hidden-by="results"], &[data-display="properties"] [data-hidden-by="properties"]
       display: none
@@ -92,3 +93,5 @@ body
       transition: opacity var(--transition-wipe)
 main
   padding-top: var(--height-header)
+
+  //::-webkit-scrollbar-thumb
