--- a/source/css/object/project/_Properties.sass
+++ b/source/css/object/project/_Properties.sass
@@ -1,5 +1,7 @@
 #Properties
-  width: calc(100vw - var(--width-condition) - var(--width-global-tool-bar))
+  --width-offset: calc(var(--width-condition) + var(--width-global-tool-bar))
+
+  width: calc(min(100vw, var(--min-width-app)) - var(--width-offset))
   overflow: auto
   position: relative
   display: flex
