--- a/source/css/object/project/_Results.sass
+++ b/source/css/object/project/_Results.sass
@@ -1,11 +1,10 @@
 #Results
   --height-header: calc(var(--height-track) - var(--padding-track-block-start) * 2 + .2rem)
 
-  width: calc(100vw - var(--width-condition))
-  min-width: calc(var(--min-width-app) - var(--width-condition))
+  width: calc(min(100vw, var(--min-width-app)) - var(--width-condition))
+  overflow: auto
   > .inner
     height: 100%
-    overflow-y: auto
     > section
       transition: height var(--transition-instant)
       // > header
